# suidsnoop

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.vim/: coc-settings.json
suidsnoop/: Cargo.toml
suidsnoop-common/: Cargo.toml
suidsnoop-common/src/: lib.rs
suidsnoop-ebpf/: Cargo.toml
suidsnoop-ebpf/src/: main.rs  vmlinux.rs
suidsnoop/src/: main.rs
xtask/src/: build_ebpf.rs
