[package]
name = "suidsnoop-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
suidsnoop-common = { path = "../suidsnoop-common" }

[[bin]]
name = "suidsnoop"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []

# TODO delete this when my patch is merged upstream
[patch.crates-io]
aya-bpf = {git = "https://github.com/willfindlay/aya", branch = "arguments"}

# TODO delete this when my patch is merged upstream
[patch."http://github.com/aya-rs/aya"]
aya-bpf = {git = "https://github.com/willfindlay/aya", branch = "arguments"}
