[package]
name = "suidsnoop"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
suidsnoop-common = { path = "../suidsnoop-common", features=["userspace"] }
anyhow = "1.0.42"
ctrlc = "3.2"

structopt = { version = "0.3"}

[[bin]]
name = "suidsnoop"
path = "src/main.rs"
